syntax = "proto3";

package com.InventoryOrder;


option java_multiple_files = true;
option java_package = "com.InventoryOrder";


import "google/protobuf/empty.proto";
 
service InventoryService {
  rpc GetInventoryById(InventoryRequest) returns (InventoryResponse);
  rpc CreateInventory(CreateInventoryRequest) returns (InventoryResponse);
  rpc GetAllInventories(google.protobuf.Empty) returns (InventoryListResponse);
}

message InventoryRequest {
  int64 InventoryId = 1;
}

message InventoryResponse {
  int64 InventoryId = 1;
  string name = 2;
  int32 stock = 3;
  double price = 4;
}

message CreateInventoryRequest {
  int64 inventoryId = 1;
  string name = 2;
  int32 stock = 3;
  double price = 4;
}


message InventoryListResponse {
  repeated InventoryResponse inventories = 1;
}